# phonikud-chat

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  recorder.py  stt.py  tts.py
src/agent/: ask.py  prompt.py
src/agent/tools/: __init__.py  datetime_tool.py  schedule_tool.py  voice_tool.py
