[project]
name = "phonikud-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx>=0.4.9",
    "misaki[en]>=0.9.4",
    "ollama>=0.6.1",
    "pip>=25.3",
    "pywhispercpp>=1.4.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
